objects/lightsideapps__User_Delegation__c.object
<CustomObject>
    <fields>
        <fullName>lightsideapps__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Delegations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Delegate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Optional - if blank delegate is pulled from the user record.</inlineHelpText>
        <label>Delegate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Delegations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lightsideapps__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Object__c</fullName>
        <label>Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Sharing_Rule__c</fullName>
        <inlineHelpText>The Sharing Reason to use. This must be setup on the Object selected.</inlineHelpText>
        <label>Apex Sharing Reason</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Specific_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specific Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>User Delegation</label>
    <listViews>
        <fullName>lightsideapps__All</fullName>
        <columns>NAME</columns>
        <columns>lightsideapps__Approver__c</columns>
        <columns>lightsideapps__Delegate__c</columns>
        <columns>lightsideapps__Specific_Period__c</columns>
        <columns>lightsideapps__Start_Date__c</columns>
        <columns>lightsideapps__End_Date__c</columns>
        <columns>lightsideapps__Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UD-{00000}</displayFormat>
        <label>User Delegation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Delegations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>lightsideapps__Required_Dates</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 lightsideapps__Specific_Period__c,
 ISBLANK(lightsideapps__End_Date__c),
 ISBLANK(lightsideapps__Start_Date__c) 

)</errorConditionFormula>
        <errorMessage>Start Date and End Date are required if Specific period is specified.</errorMessage>
    </validationRules>
</CustomObject>